--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.33",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^10.0.1",
     "sass": "^1.93.2"
   },
   "devDependencies": {
